src/assets/game-board.css
/* Board Layout */

.game-board {
  width: 100%;
  height: 100%;
  min-width: 320px;
  display: flex;
  justify-content: center;
  overflow: scroll;
  background-color: #000000;
  -webkit-user-select: none;
  user-select: none;
}

.game-container {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #727272;
}

.board-container {
  position: relative;
  width: 100%;
  margin: auto;
}

.opponent-board {
  flex: 1 1;
  display: flex;
  flex-direction: column-reverse;
  justify-content: end;
  background: radial-gradient(#f0e4e4, #737373);
}

.player-board {
  flex: 1 1;
  background: radial-gradient(#f0e4e4, #737373);
}

/* Central Game Stats */

.game-details {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70px;
  background: radial-gradient(#dfdfdf, #bfbfbf);
}

.game-details .pass-btn {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 100%;
}

.game-details .pass-btn span {
  transform: rotate(-90deg);
}

.game-details .small-card {
  flex-shrink: 0;
  margin: 0 5px;
}

.player-details,
.opponent-details {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0;
  display: flex;
}

.player-details {
  flex-direction: row-reverse;
}

.game-details .total {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.game-details .total .icon {
  position: absolute;
}

.game-details .total .turn-icon {
  top: -27px;
  left: 5px;
  filter: drop-shadow(1px 0 0 #e8f0ff) drop-shadow(-1px 0 0 #e8f0ff) drop-shadow(0 1px 0 #e8f0ff)
    drop-shadow(0 -1px 0 #e8f0ff);
  z-index: 1000;
}

.game-details .total .round-icon {
  filter: drop-shadow(1px 0 0 #494000) drop-shadow(-1px 0 0 #494000) drop-shadow(0 1px 0 #494000)
  drop-shadow(0 -1px 0 #494000);
}

.game-details .total .pass-icon {
  filter: drop-shadow(1px 0 0 #404040FF) drop-shadow(-1px 0 0 #404040FF) drop-shadow(0 1px 0 #404040FF)
  drop-shadow(0 -1px 0 #404040FF);
}

.game-details .player-details .total .round-icon,
.game-details .opponent-details .total .pass-icon {
  top: -5px;
  left: -5px;
}

.game-details .player-details .total .pass-icon,
.game-details .opponent-details .total .round-icon {
  top: -5px;
  right: -5px;
}

.game-details .avatar {
  width: 30px;
  height: 30px;
  border: 2px solid #ffffff;
  border-radius: 999px;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  box-shadow: 0 0 0 2px #000000;
}

.game-details .player-details .avatar.active,
.game-details .opponent-details .avatar.active {
  border: 2px solid #ffffff;
  box-shadow: 0 0 0 3px #357bff;
}

.game-details .stat-badge {
  width: 30px;
  height: 30px;
  margin-top: -8px;
  font-weight: bold;
  font-size: 15px;
}

.game-details .details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.game-details .name,
.game-details .stats {
  display: flex;
  height: 30px;
  padding: 0 5px;
}

.game-details .name {
  flex-direction: column;
  justify-content: center;
  font-size: 10px;
}

.game-details .name .title {
  font-weight: bold;
}

.game-details .player-details .name {
  text-align: end;
}

.game-details .stats {
  align-items: center;
}

.game-details .player-details .stats {
  flex-direction: row-reverse;
  justify-content: end;
}

.game-details .stats .hand-total,
.game-details .stats .discard-pile {
  display: flex;
  align-items: center;
  width: 35px;
  height: 25px;
  font-size: 12px;
  font-weight: bold;
}

.game-details .stats .discard-pile {
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.game-details .player-details .stats .hand-total,
.game-details .player-details .stats .discard-pile {
  flex-direction: row-reverse;
}

/* Card Rows */

.card-row {
  display: flex;
  position: relative;
  height: 70px;
  box-sizing: border-box;
}

.opponent-board .card-row {
  border-bottom: 1px solid #5c6166;
}

.player-board .card-row {
  border-top: 1px solid #5c6166;
}

.card-row.highlight {
  z-index: 3000;
  position: relative;
  background-color: #b2afaf;
}

.card-row.row-select {
  z-index: 3000;
  position: relative;
  border: 1px solid chartreuse;
  animation: pulse 1s infinite;
  cursor: pointer;
  background-color: #b2afaf;
}

.icon.row-select {
  z-index: 3100;
  position: absolute;
  top: 10px;
  left: 40px;
}

.icon.row-select,
.card-row.row-select .small-card {
  cursor: pointer;
}

.row-stats {
  flex: 0 30px;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

.row-stats .stat-badge {
  width: 22px;
  height: 22px;
  font-size: 13px;
}

.row-stats .card-stat-badge {
  width: 18px;
  height: 18px;
}

.card-container {
  flex: 1 1;
  display: flex;
  justify-content: center;
  background-position: center;
  background-size: 30px;
  background-repeat: no-repeat;
}

.card-row.card-row1 .card-container {
  background-image: url('./images/broadsword.svg');
}

.card-row.card-row2 .card-container {
  background-image: url('./images/crossbow.svg');
}

.card-row.card-row3 .card-container {
  background-image: url('./images/catapult.svg');
}

.player-hand {
  justify-content: center;
  background-color: #bfbfbf;
}

/* Post-match Stats */

.match-stats {
  flex-grow: 1;
  flex-basis: 0;
  display: flex;
  flex-direction: column;
}

.match-stats.player {
  align-items: end;
  padding-right: 15px;
  border-right: 1px solid #ffffff;
}

.match-stats.opponent {
  align-items: start;
  padding-left: 15px;
}

.match-stats .round-total {
  position: relative;
  height: 20px;
}

.match-stats .round-total.win {
  font-weight: bold;
}

.match-stats .round-total .icon {
  position: absolute;
  top: -2px;
}

.match-stats.player .round-total .icon {
  left: -25px;
}

.match-stats.opponent .round-total .icon {
  right: -25px;
}

.match-stats .award {
  margin-top: 10px;
}

/* Card Modal */

.game-board .card-modal {
  bottom: 70px;
}

/* Pause Menu Button */

.btn.pause-menu-btn {
  z-index: 7000;
  position: absolute;
  top: 5px;
  right: 5px;
  border: none;
  background-color: rgb(0, 0, 0, 0.5);
}

/* Desktop Styles */

@media (min-width: 1200px) and (min-height: 880px) and (orientation: landscape) {
  .game-container {
    width: 80%;
    max-width: 1600px;
  }
}

/* Desktop / Tablet Styles */

@media (min-height: 880px) and (orientation: landscape),
  (min-width: 768px) and (min-height: 1024px) and (orientation: portrait) {
  /* Board Layout (Desktop / Tablet) */

  .game-details,
  .card-row {
    height: 110px;
  }

  .icon.row-select {
    position: absolute;
    top: 20px;
    left: 80px;
  }

  .card-container {
    background-size: 50px;
  }

  .row-stats {
    flex: 0 55px;
  }

  .row-stats .stat-badge {
    width: 35px;
    height: 35px;
    font-size: 20px;
  }

  .row-stats .card-stat-badge {
    width: 26px;
    height: 26px;
    margin-top: 3px;
    font-size: 16px;
  }

  /* Central Game Stats (Desktop / Tablet) */

  .game-details .pass-btn {
    width: 55px;
  }

  .player-details {
    padding-right: 20px;
    gap: 5px;
  }

  .opponent-details {
    padding-left: 20px;
    gap: 5px;
  }

  .game-details .total .turn-icon {
    top: -45px;
    left: 9px;
  }

  .game-details .player-details .total .round-icon,
  .game-details .opponent-details .total .pass-icon {
    top: -8px;
    left: -8px;
  }

  .game-details .player-details .total .pass-icon,
  .game-details .opponent-details .total .round-icon {
    top: -8px;
    right: -8px;
  }

  .game-details .avatar {
    width: 50px;
    height: 50px;
  }

  .game-details .player-details .avatar.active,
  .game-details .opponent-details .avatar.active {
    box-shadow: 0 0 0 7px #357bff;
  }

  .game-details .stat-badge {
    width: 50px;
    height: 50px;
    margin-top: -8px;
    font-size: 24px;
  }

  .game-details .name,
  .game-details .stats {
    height: 50px;
    padding: 0 10px;
  }

  .game-details .name {
    font-size: 16px;
  }

  .game-details .stats .hand-total,
  .game-details .stats .discard-pile {
    height: 40px;
    width: 70px;
    font-size: 20px;
  }

  .game-details .stats .discard-pile.disabled {
    cursor: not-allowed;
  }

  .game-details .player-details .stats .icon {
    margin-left: 2px;
  }

  .game-details .opponent-details .stats .icon {
    margin-right: 2px;
  }

  /* Post-match Stats (Desktop / Tablet) */

  .match-stats.player {
    padding-right: 20px;
  }

  .match-stats.opponent {
    padding-left: 20px;
  }

  .match-stats .round-total {
    height: 30px;
  }

  .match-stats .round-total .icon {
    top: -4px;
  }

  .match-stats.player .round-total .icon {
    left: -40px;
  }

  .match-stats.opponent .round-total .icon {
    right: -40px;
  }

  /* Card Modal (Desktop / Tablet) */

  .game-board .card-modal {
    bottom: 110px;
  }
}

